# OpenSpringmaker

./: .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  clippy.toml  deny.toml  release-please-config.json
.cargo/: audit.toml  mutants.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: audit.yml  ci.yml  clippy-sarif.yml  codeql.yml  deny.yml  format-docs.yml  mutants.yml  release.yml
.superpowers/sdd/: task-1-report.md
docs/: REVIEW_CHECKLIST.md
docs/adr/: 0001-scenario-based-solver.md  0002-si-internal-newtype-units.md  0003-unit-native-mts-coefficients.md  0004-two-crate-workspace.md  0005-absolute-stability-buckling.md  0006-allowable-stress-simplification.md  0007-accept-transitive-lru-advisory.md  0008-humble-view-presenter-pattern.md  0009-chart-bitmap-bundled-font.md  0010-accept-transitive-paste-advisory.md  0011-accept-transitive-ttf-parser-advisory.md  0012-accept-transitive-quick-xml-advisories.md  0013-public-enum-exhaustiveness-policy.md
docs/superpowers/plans/: 2026-06-19-core-solver-compression-round-wire.md  2026-06-21-materials-database-pr-a.md  2026-06-21-materials-pr-c-gui-editor.md  2026-06-22-extension-springs-phase1.md  2026-06-23-selectable-curvature-correction-phaseA-engine.md  2026-06-23-selectable-curvature-correction-phaseB-gui.md  2026-06-26-extension-min-weight.md  2026-06-26-extension-springs-phase2-input-modes.md  2026-06-26-gui-family-scaffolding.md  2026-06-26-torsion-springs-phase1.md  2026-06-27-gui-extension-family.md  2026-06-28-gui-extension-input-modes.md  2026-07-03-gui-torsion-family.md  2026-07-04-gui-torsion-input-modes.md  2026-07-04-torsion-input-modes.md  2026-07-04-torsion-min-weight.md  2026-07-05-gui-torsion-fatigue.md  2026-07-05-gui-torsion-min-weight.md  2026-07-05-torsion-fatigue.md  2026-07-06-assembly-engine.md  2026-07-06-conical-engine.md  2026-07-06-cross-family-hardening.md  2026-07-06-gui-conical.md  2026-07-07-gui-assembly.md  2026-07-08-rectangular-engine.md  2026-07-10-gui-plots.md  2026-07-11-gui-3d-viz.md  2026-07-11-gui-light-theme.md  2026-07-11-gui-visual-refresh.md  2026-07-12-gui-shaded-3d.md  2026-07-13-2d-engineering-diagram.md  2026-07-14-inactive-coils.md
docs/superpowers/research/: 2026-06-21-pr-b-materials-data.md
docs/superpowers/specs/: 2026-06-19-core-solver-compression-round-wire-design.md  2026-06-21-materials-database-design.md  (+26 more)
examples/: assembly_nested.toml  assembly_series.toml  compression_music_wire.toml  conical_chrome_silicon.toml  extension_stainless_302.toml  torsion_chrome_vanadium.toml
springcore/: Cargo.toml
springcore/data/: materials.toml
springcore/src/: design.rs  end_type.rs  error.rs  family.rs  fatigue.rs  lib.rs  material.rs  material_persist.rs  material_store.rs  mechanics.rs  numeric.rs  optimize.rs  persistence.rs  scenario.rs  test_support.rs  units.rs
springcore/src/assembly/: design.rs  mod.rs
springcore/src/conical/: design.rs  mod.rs
springcore/src/extension/: design.rs  ends.rs  mechanics.rs  mod.rs  optimize.rs  scenario.rs
springcore/src/rectangular/: design.rs  mod.rs
springcore/src/torsion/: design.rs  fatigue.rs  mechanics.rs  mod.rs  optimize.rs  scenario.rs
springcore/tests/: golden.rs
springmaker/: Cargo.toml
springmaker/src/: app.rs  calculator.rs  form.rs  form_helpers.rs  main.rs  materials_form.rs  materials_view.rs  materials_view_model.rs  picker.rs  plot.rs  presenter.rs  settings.rs  settings_view.rs  settings_view_model.rs  ui_tests.rs  view.rs  view_model.rs  widgets.rs
springmaker/src/assembly/: diagram_model.rs  form.rs  mod.rs  plot_model.rs  scene_model.rs  view.rs  view_model.rs
springmaker/src/compression/: diagram_model.rs  form.rs  mod.rs  plot_model.rs  scene_model.rs  view.rs  view_model.rs
springmaker/src/conical/: diagram_model.rs  form.rs  mod.rs  plot_model.rs  scene_model.rs  view.rs  view_model.rs
springmaker/src/diagram/: canvas.rs  common.rs  geometry.rs  layout.rs  mod.rs
springmaker/src/extension/: diagram_model.rs  form.rs  mod.rs  plot_model.rs  scene_model.rs  view.rs  view_model.rs
springmaker/src/plot/: canvas.rs  mapping.rs  mod.rs  render.rs
springmaker/src/torsion/: diagram_model.rs  form.rs  mod.rs  plot_model.rs  scene_model.rs  view.rs  view_model.rs
springmaker/src/viz/: canvas3d.rs  mod.rs  render3d.rs  sdf.rs  shader3d.rs  shader3d.wgsl
