[workspace]
resolver = "2"
members = ["springcore", "springmaker"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/r6e/OpenSpringmaker"
rust-version = "1.86"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
toml = "1.1"
directories = "6"
approx = "0.5"
proptest = "1"
