[package]
name = "springcore"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Engineering calculations for helical compression springs"

[dependencies]
directories = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }
serde_json = { workspace = true }
