[package]
name = "springmaker"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Desktop calculator for helical compression spring design"

[dependencies]
springcore = { path = "../springcore" }
iced = "0.14"
plotters = "0.3"
plotters-iced = "0.11"
rfd = "0.14.1"
plotters-iced2 = "0.14.0"

[dev-dependencies]
approx = { workspace = true }
