[package]
name = "springmaker"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Desktop calculator for helical compression spring design"

[dependencies]
springcore = { path = "../springcore" }
iced = { version = "0.14", features = ["image-without-codecs"] }
# Chart is rendered to an in-memory bitmap (no iced-coupled backend, so no
# plotters-iced version lag) with a bundled font (ab_glyph) to avoid any
# system-font lookup. default-features off drops font-kit/svg/image/gif/chrono.
plotters = { version = "0.3", default-features = false, features = [
    "bitmap_backend",
    "line_series",
    "ab_glyph",
] }
rfd = "0.14.1"

[dev-dependencies]
approx = { workspace = true }
