[package]
name = "springmaker"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Desktop calculator for helical compression spring design"
# Binary application crate — not published to crates.io (it has an internal
# path dependency on springcore).
publish = false

[dependencies]
springcore = { path = "../springcore" }
serde = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
iced = { version = "0.14", features = ["image-without-codecs", "canvas"] }
# Chart is rendered to an in-memory bitmap (no iced-coupled backend, so no
# plotters-iced version lag) with a bundled font (ab_glyph) to avoid any
# system-font lookup. default-features off drops font-kit/svg/image/gif/chrono.
plotters = { version = "0.3", default-features = false, features = [
    "bitmap_backend",
    "line_series",
    "ab_glyph",
] }
rfd = "0.17.2"
# Boot-time GPU probe (main.rs::shader_probe): wgpu's `request_adapter` is
# async only for WebGPU's sake — on native it resolves immediately. pollster
# is the smallest executor that drives a single future to completion on the
# current thread (springmaker has no `futures` dependency to reuse, and iced
# does not re-export an executor).
pollster = "0.4"

[dev-dependencies]
approx = { workspace = true }
iced_test = "0.14"
# No-GPU shader validation gate for viz::shader3d (Task 5): parses and
# type-checks the instantiated WGSL via naga's own front-end, without a GPU
# adapter. Version-matched to iced_wgpu 0.14's own `wgpu` dependency (wgpu
# 27.0, which itself depends on naga 27.0.3 per this workspace's Cargo.lock)
# so the SAME naga this crate's shader will actually run through does the
# checking — not a foreign, potentially-more-lenient/stricter parser.
naga = { version = "27.0", features = ["wgsl-in"] }
